--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@angular/compiler-cli": "~6.1.0",
     "@angular/language-service": "~6.1.0",
     "@compodoc/compodoc": "^1.1.7",
-    "@types/jasmine": "~2.8.8",
+    "@types/jasmine": "^2.8.14",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
