--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "docs": "./node_modules/.bin/compodoc -p src/tsconfig.app.json --theme vagrant --hideGenerator --name Document_Verification --serve --open"
   },
   "private": true,
   "dependencies": {
